--- a/FOSS/3.md
+++ b/FOSS/3.md
@@ -10,6 +10,8 @@ permalink: /FOSS/3/
 NOBODY has the capacity to undestand your pain better than YOU. 
 ## Introduction and Fundamentals (20 modules)
 
+Let's say you were looking for a friendly, professional, yet potentially contentious 6-minute graduate/faculty university seminar by knowledgeable researchers and specialists doing a [deep dive discussion with highly divergent views on this controversial and emotional topic.](https://illuminate.google.com/library?play=NoP2Oe_fD1D31) 
+
 ### Module 1: **Introduce The Full Syllabus** 
 
 Just to get an idea for the *lay of the land* in the world of pain management, first try to ***grok*** the full listing of modules 2 through 200 into your brain. Don't read it, just skim the full listing to get an idea of what's covered. Then you might want to skip down below to the module(s) that strikes your eye ... after you're done with this, then proceed with Module 2.
